tests/purs/warning/2411.out
Error found:
in module [33mMain[0m
at tests/purs/warning/2411.purs:10:7 - 10:15 (line 10, column 7 - line 10, column 15)

  Name [33mx[0m was shadowed.

in value declaration [33mtest[0m

See https://github.com/purescript/documentation/blob/master/errors/ShadowedName.md for more information,
or to contribute content related to this error.

